tests/typechecking/invalid/call_bad_arg.ml
let _ = print_int ()
